--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
 .App {
-  text-align: center;
+	text-align: center;
+	background-color: hsl(219, 23%, 39%);
+	color: #61dafb;
+	height: 100vh;
+	width: 100%;
+}
+
+.App > * {
+	background-color: hsl(220, 87%, 24%);
+	margin: 10px;
+	border-radius: 20px;
+}
+
+.container {
+	display: grid;
+	grid-auto-columns: 1fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr 1fr 1fr;
+	/* gap: 5px 20px; */
+	grid-template-areas:
+		'List Logo Logo Menu'
+		'List Feed Feed Menu'
+		'List Feed Feed Menu'
+		'List Feed Feed Menu';
+}
+.Logo {
+	grid-area: Logo;
+}
+.Menu {
+	grid-area: Menu;
+}
+.List {
+	grid-area: List;
+}
+.Feed {
+	grid-area: Feed;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+	height: 40vmin;
+	pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+	.App-logo {
+		animation: App-logo-spin infinite 20s linear;
+	}
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
 }
