--- a/src/App.css
+++ b/src/App.css
@@ -8,21 +8,18 @@
 
 .App > * {
 	background-color: hsl(220, 87%, 24%);
-	margin: 10px;
+	margin: 20px;
 	border-radius: 20px;
 }
 
 .container {
 	display: grid;
-	grid-auto-columns: 1fr;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
-	grid-template-rows: 1fr 1fr 1fr 1fr;
-	gap: 5px 20px;
+	grid-template-columns: 1fr 3fr 1fr;
+	grid-template-rows: 1fr 2fr 1fr;
 	grid-template-areas:
-		'AllTodos Calendar Calendar DailyTodos'
-		'AllTodos Calendar Calendar DailyTodos'
-		'AllTodos Calendar Calendar DailyTodos'
-		'AllTodos Calendar Calendar DailyTodos';
+		'AllTodos Calendar DailyTodos'
+		'AllTodos Calendar DailyTodos'
+		'AllTodos TodoForm DailyTodos';
 }
 .DailyTodos {
 	grid-area: DailyTodos;
@@ -47,11 +44,12 @@
 
 @media (max-width: 500px) {
 	.container {
+		grid-template-columns: 2fr 1fr 1fr;
+		grid-template-rows: 2fr 1fr 1fr;
 		grid-template-areas:
-			'AllTodos AllTodos AllTodos AllTodos'
-			'Calendar Calendar Calendar Calendar'
-			'Calendar Calendar Calendar Calendar'
-			'DailyTodos DailyTodos DailyTodos DailyTodos';
+			'Calendar Calendar Calendar'
+			'TodoForm AllTodos DailyTodos'
+			'TodoForm AllTodos DailyTodos';
 	}
 }
 
