--- a/src/App.css
+++ b/src/App.css
@@ -8,16 +8,15 @@
 
 .App > * {
 	background-color: hsl(220, 87%, 24%);
-	margin: 20px;
+	margin: 5px;
 	border-radius: 20px;
 }
 
 .container {
 	display: grid;
 	grid-template-columns: 1fr 3fr 1fr;
-	grid-template-rows: 1fr 2fr 1fr;
+	grid-template-rows: 2fr 1fr;
 	grid-template-areas:
-		'AllTodos Calendar DailyTodos'
 		'AllTodos Calendar DailyTodos'
 		'AllTodos TodoFormContainer DailyTodos';
 }
